fix banner on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -106,7 +106,6 @@ div #map {
 }
 
 .dates p {
-
     color: #ffffff
 }
 
@@ -144,7 +143,7 @@ div #map {
         font-size: 24px;
     }
     .dates {
-        margin: 50px;
+        margin: 20px;
         padding: 10px;
     }
     .home-carousel h1  {
@@ -161,6 +160,9 @@ div #map {
     }
     .btn-wrapper {
         margin-bottom: 6px;
+    }
+    .banner-bottom {
+        margin-top: 10px;
     }
 }
 
